fixed navbar padding on smaller screens

--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -44,7 +44,7 @@
 
 @media screen and (max-width: 400px) {
     .navbar {
-        margin: 0 5% 0 5%;
+        padding: 0 5% 0 5%;
     }
     .a {
         font-size: 14px
